test/main/com/ocaml/sdk/output/errors/unbound/constructor_type.ml
let x : t = 0

(*
File "constructor_type.ml", line 1, characters 8-9:
Error: Unbound type constructor t

File "constructor_type.ml", line 1, characters 8-9:
1 | let x : t = 0
            ^
Error: Unbound type constructor t
*)